Adaptação para MySQL  e primeira migration

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-5a52b400-3b32-40f0-9d24-66b2fe486afb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMVCContext": "server=localhost;userid=root;password=12345;database=saleswebmvcappdb"
   }
 }
